--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "meteor-node-stubs": "^1.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "uniqid": "^5.4.0"
   },
   "meteor": {
     "mainModule": {
