--- a/private/assets/settings.json
+++ b/private/assets/settings.json
@@ -1,30 +1,43 @@
 [
     {
-        "sub": "Robot",
-        "cond": [
+        "name": "display_rules",
+        "value": [
             {
-                "value": 3.0
-            }
-        ]
-    },
-    {
-        "sub": "ICT",
-        "cond": [
-            {
-                "value": 5.0
-            }
-        ]
-    },
-    {
-        "sub": "RobotICT",
-        "cond": [
-            {
-                "value": 3.0
+                "sub": "Robot",
+                "cond": [
+                    {
+                        "value": 3.0
+                    }
+                ]
             },
             {
-                "op": "&",
-                "value": 5.0
+                "sub": "ICT",
+                "cond": [
+                    {
+                        "value": 5.0
+                    }
+                ]
+            },
+            {
+                "sub": "RobotICT",
+                "cond": [
+                    {
+                        "value": 3.0
+                    },
+                    {
+                        "op": "&",
+                        "value": 5.0
+                    }
+                ]
             }
         ]
+    },
+    {
+        "name": "number_range",
+        "value": {
+            "from": -100,
+            "to": 150,
+            "range": [0, 100]
+        }
     }
 ]
